--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,9 +1,5 @@
-<h1>{{title}}</h1>
-<ol>
-  <li *ngFor="let user of users">{{user.userName}}</li>
-</ol>
+<app-nav></app-nav>
 
-<div *ngIf="error" >
-  <h1 style="color: red;">{{error.message}}</h1>
-  <h1>{{error.status}}</h1>
+<div class="container" style="margin-top: 100px;">
+  <app-home></app-home>
 </div>
